<resources>
    <string name="app_name">Cotação e Tempo</string>
    <string name="quotation_url">http://developers.agenciaideias.com.br/cotacoes/json</string>
    <string name="weather_url">http://developers.agenciaideias.com.br/tempo/json/</string>
    <string name="maps_url">http://maps.google.com/maps/api/geocode/json?latlng=%1$+.7f,%2$+.7f&amp;sensor=true</string>
    <string name="quotation_type">Indefinida</string>
    <string name="quotation_value">Valor:</string>
    <string name="quotation_variation">Variação:</string>
    <string name="get_quotation">Atualizar</string>
    <string name="dialog_attention">Atenção</string>
    <string name="dialog_wait">Aguarde</string>
    <string name="dialog_wait_message">Por Favor Aguarde...</string>
    <string name="dialog_get_quotation_error">Não foi possivel acessar as informções de cotação...</string>
    <string name="dialog_get_weather_error">Não foi possivel acessar as informações de localização do dispositivo...</string>
    <string name="dialog_get_weather_info_error">Não foi possivel acessar as informações de tempo...</string>
    <string name="warning_message">*Os Valores são atualizados automaticamente a cada 5 minutos.</string>
    <string name="button_weather">Clique na imagem para informações de Tempo.</string>
    <string name="button_quotation">Clique na imagem para informações de Cotação.</string>
    <string name="label_pressure">Pressão:</string>
    <string name="label_pressure_status">Pressão Status:</string>
    <string name="label_humidity">Humidade:</string>
    <string name="label_visibility">Visibilidade:</string>
    <string name="label_sunrise">Nascer do Sol:</string>
    <string name="label_wind_direction">Direção do Vento:</string>
    <string name="label_sunset">Por do Sol:</string>
    <string name="label_wind_speed">Velocidade do Vento:</string>
    <string name="label_max_temperature">Máxima:</string>
    <string name="label_min_temperature">Mínima:</string>
    <string name="label_previsions">Previsões</string>
</resources>
